--- a/MyLibrary/app/src/main/res/layout/activity_all_books.xml
+++ b/MyLibrary/app/src/main/res/layout/activity_all_books.xml
@@ -4,7 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AllBooksActivity"
-    android:background="@color/purple_200">
+    tools:context=".AllBooksActivity">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/booksRecView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="1dp"
+        android:layout_margin="15dp"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
