--- a/MyLibrary/app/src/main/res/layout/activity_book.xml
+++ b/MyLibrary/app/src/main/res/layout/activity_book.xml
@@ -20,6 +20,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:text="Long Description"
+                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                 app:layout_constraintStart_toStartOf="@+id/guideline4"
                 app:layout_constraintTop_toBottomOf="@+id/descriptionText" />
 
@@ -167,6 +168,13 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 app:layout_constraintGuide_begin="118dp" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_begin="385dp" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
