--- a/Calculator/app/src/main/res/layout/activity_main.xml
+++ b/Calculator/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,31 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/txtInput2"
+        android:layout_width="match_parent"
+        android:layout_height="125dp"
+        android:background="#efefef"
+        android:textSize="48sp"
+        android:textColor="@color/gray"
+        android:maxLength="12"
+        android:padding="10dp"
+        android:gravity="right|center_vertical|bottom"/>
+
+    <TextView
+        android:id="@+id/txtInputSymbol"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="#efefef"
+        android:textSize="25sp"
+        android:textColor="@color/gray"
+        android:maxLength="12"
+        android:padding="10dp"
+        android:gravity="right|center_vertical"/>
+
+    <TextView
         android:id="@+id/txtInput"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="125dp"
         android:background="#efefef"
         android:textSize="48sp"
         android:maxLength="12"
