--- a/Grocery/app/src/main/res/layout/activity_main_seller.xml
+++ b/Grocery/app/src/main/res/layout/activity_main_seller.xml
@@ -31,6 +31,15 @@
             android:background="@null"
             android:layout_alignParentRight="true" />
 
+        <ImageButton
+            android:id="@+id/editProfileBtn"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/ic_edit_white"
+            android:layout_toStartOf="@+id/logoutBtn"
+            android:background="@null"
+            android:layout_toLeftOf="@+id/logoutBtn" />
+
 
     </RelativeLayout>
 
