--- a/Grocery/app/src/main/res/layout/activity_register_seller.xml
+++ b/Grocery/app/src/main/res/layout/activity_register_seller.xml
@@ -7,6 +7,7 @@
     android:background="@color/white"
     tools:context=".RegisterSellerActivity">
 
+    <!-- ToolBar -->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="80dp"
