Show, Filter, Search Products

--- a/Grocery/app/src/main/res/values/colors.xml
+++ b/Grocery/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="gray01">#c9c9c9</color>
     <color name="gray02">#959595</color>
     <color name="colorPrimary">#0A527E</color>
+    <color name="green">#43A047</color>
 </resources>
