--- a/Grocery/app/src/main/res/layout/activity_add_product.xml
+++ b/Grocery/app/src/main/res/layout/activity_add_product.xml
@@ -29,6 +29,11 @@
             android:textStyle="bold" />
     </RelativeLayout>
 
+            <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/productIconIv">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -43,6 +48,8 @@
             app:c_border="true"
             app:c_border_color="@color/design_default_color_primary_dark"
             app:c_border_width="1dp"/>
+
+
 
         <EditText
             android:id="@+id/titleEt"
@@ -166,6 +173,10 @@
             android:minWidth="120dp"
             android:layout_margin="5dp"/>
 
+
+
     </RelativeLayout>
+
+</ScrollView>
 
 </LinearLayout>
